# pytemplate

./: pyproject.toml  readme.md  requirements.txt
.github/workflows/: unittests.yml
tests/: t_example.py  tox.ini
