[project]
name = "myproject"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
description = "A very good project indeed"
readme = "readme.md"
dependencies = ["holytools"]
#dependencies = ["holytools @ git+https://github.com/Somerandomguy10111/holytools"]
#dependencies = ["holytools @ git+ssh://git@github.com/Somerandomguy10111/holytools", pkg2, pkg3]

[tool.setuptools.packages.find]
include = ["myproject"]   # Only discover in myproject folder
